--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -12,7 +12,7 @@ Fonts are separated by a & */
   --accent2-color: #e76f51;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "Roboto";
+  --heading-font: Roboto;
   --paragraph-font: Roboto, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
@@ -31,10 +31,11 @@ Fonts are separated by a & */
 /*  Look around below...but DON'T CHANGE ANYTHING! */
 
 body {
+  font-family: Arial, Helvetica, sans-serif;
   max-width: 960px;
   margin: 0 auto;
-  padding: 4em;
-  font-size: 18px;
+  padding: 0;
+  font-size: 22px;
   text-align: center;
 }
 img {
@@ -43,11 +44,12 @@ img {
   max-width: 300px;
 }
 h1, h2, h3, h4, h5, h6 {
-  font-family: var(--heading-font);
+  font-family: Roboto, Arial, Helvetica, sans-serif;
   color: var(--headline-color-on-white);
 }
 h2 {
   text-align: center;
+  margin: 0;
 }
 hr {
   height: 3px;
@@ -64,10 +66,11 @@ header > h1, header > h2 {
   color: var(--headline-color-on-color);
 }
 p {
-  font-family: var(--paragraph-font);
+  font-family: Roboto, Arial, Helvetica, sans-serif;
   color: var(--paragraph-color-on-white);
   padding: 1em;
 }
+
 .colors {
   width: 100%;
   min-width: 350px;
@@ -108,7 +111,7 @@ nav  {
   display: flex;
 }
 nav a {
-  padding:1em;
+  padding: 35px;;
   min-width: 120px;
   text-decoration: none;
   padding: 10px;
