--- a/portfolio/styles/site-plan.css
+++ b/portfolio/styles/site-plan.css
@@ -1,7 +1,7 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Courier+Prime:ital@1&family=Roboto:wght@100;500&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
@@ -11,8 +11,8 @@ Fonts are separated by a | */
   --accent2-color: #e76f51;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon SC";
-  --paragraph-font: Roboto, Helvetica, sans-serif;
+  --heading-font: Roboto;
+  --paragraph-font: Roboto, Courier Prime, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #264653;  /* headlines on a white background */ 
@@ -41,7 +41,7 @@ img {
   margin: 0 auto;
 }
 h1, h2, h3, h4, h5, h6 {
-  font-family: var(--heading-font);
+  font-family: Roboto, Courier prime, sans-serif (--heading-font);
   color: var(--headline-color-on-white);
 }
 h2 {
