--- a/portfolio/styles/site-plan.css
+++ b/portfolio/styles/site-plan.css
@@ -11,8 +11,8 @@ Fonts are separated by a | */
   --accent2-color: #e76f51;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: Roboto;
-  --paragraph-font: Roboto, Courier Prime, sans-serif;
+  --heading-font: Roboto, Arial, sans-serif;
+  --paragraph-font: "Courier Prime", "Courier New", monospace;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #264653;  /* headlines on a white background */ 
@@ -41,7 +41,7 @@ img {
   margin: 0 auto;
 }
 h1, h2, h3, h4, h5, h6 {
-  font-family: Roboto, Courier prime, sans-serif (--heading-font);
+  font-family: var(--heading-font);
   color: var(--headline-color-on-white);
 }
 h2 {
