--- a/portfolio/styles/site-plan.css
+++ b/portfolio/styles/site-plan.css
@@ -12,7 +12,7 @@ Fonts are separated by a | */
 
   /* change the values below  to your chosen font(s) */
   --heading-font: Roboto, Arial, sans-serif;
-  --paragraph-font: "Courier Prime", "Courier New", monospace;
+  --paragraph-font: "Courier Prime", "Courier New", sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #264653;  /* headlines on a white background */ 
