--- a/portfolio/styles/style.css
+++ b/portfolio/styles/style.css
@@ -47,6 +47,15 @@ header{
     grid-column: 1/11;
     grid-row: 4/9;
 }
+
+#image {
+   margin-top: 50px;
+   padding-left: 300px;
+  
+}
+
+
+
 .msg {
     background-color: #2a9d8f;
     font-size: 1em;
@@ -54,6 +63,15 @@ header{
     padding: 35px;
     grid-column: 6/10;
     grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.msg1 {
+    font-size: 1em;
+    line-height: 1.5em;
+    padding: 5px;
+    grid-column: 2/3;
+  
     box-shadow: 5px 5px 10px #6f7364;
 }
 nav {
@@ -144,18 +162,13 @@ footer p a:hover {
     width: 100%;
 }
 
-.rivers-card {
+.python-card {
     grid-column: 2/4;
     grid-row: 2/3;
 }
 
-.camping-card {
-    grid-column: 5/7;
-    grid-row: 2/3;
-}
-
-.rapids-card {
-    grid-column: 8/10;
+.accounting-card {
+    grid-column: 6/7;
     grid-row: 2/3;
 }
 
@@ -163,20 +176,31 @@ main section img {
     box-sizing: border-box;
 }
 
-#river2-img{
-    width: 100%;
-}
-
-.dates-title{
+.whatido-title, .contactme-title{
     color:#264653;
     margin-top: 10px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Roboto, sans-serif;
     text-align: center;
 
 }
 
-.dates-grid {
-text-align: center;
+.whatido-grid, .contactme-grid {
+    text-align: center;
+}
+
+.contactme-grid {
+    display: grid;
+    grid-template-columns: 3fr 3fr;
+}
+
+#ican-box {
+    grid-column: 1/4;
+    grid-row: 1/2;
+ 
+}
+
+#ican-img{
+    width: 100%;
 
 }
 
